Code-Generator/Parser.py
#!/usr/bin/python
"""
parser.py (c) 2016 gmeneze@ncsu.edu, MIT licence
Part of project for course CSC 512: Compiler Construction
http://people.engr.ncsu.edu/xshen5/csc512_fall2016/projects/Parser.html
USAGE: 
    python Parser.py <input_file>
OUTPUT:
    Produces an output in the format of :-
    pass <number of variables> <number of functions> <number of statements>
    OR
    error
"""
# Parameter list of function onwards, also capture parenthesis before and after list

from __future__ import division,print_function
import Queue
from Scanner import Scanner, Token, TOKEN_TYPES, DEBUG
from Code_Generator import Code_Generator, Token_queue, Local_dict, Func_decl_queue,Parameter_queue
import sys,re,traceback,random, operator, string, time
sys.dont_write_bytecode=True

FIRST_TIME_IND = True
#DEBUG = True
#DATA_DECLARATION = False

class Parser(object):
    def __init__(self, filename):
        self.scanner = Scanner(filename)
        self.variable_count = 0
        self.function_count = 0
        self.statement_count = 0
        self.code_generator = Code_Generator(filename)
        self.DATA_DECLARATION_IND = False

    def program(self):
        """ <program> --> empty
                        | <type name> ID <program z> """

        if DEBUG: 
            print("<program> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        # '' is interpreted as eof 
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == '':
            return True
        elif lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            Token_queue.put(self.scanner.get_next_token())
            print("Got int")
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                print("Got identifier")
                Token_queue.put(temp_token)
                if self.program_z():
                    # check if parsing has been completed
                    temp_token = self.scanner.get_next_token()
                    if temp_token['value'] == '': 
                        Token_queue.put(temp_token)
                        if DEBUG:
                            print("<program> : return True")
                        return True
                    else:
                        if DEBUG:
                            print("Parsing not completed, error in file") 
                        return False
                else:
                    if DEBUG:
                        print("Error in Parser : Non-terminal: <program> : Error from <program_z>")
                    return False  
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <program> : Invalid token")
                return False                                   
        else:
            if DEBUG:
                print("Error in Parser : Non-terminal: <program> : Invalid token")
            return False

    def program_z(self):
        """ <program z> --> <data decls new>
                           | <func list new> """

        if DEBUG:
            print("<program_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1) 
        if lookahead['value'] in ['[', ';',',']:
            # This is a data declaration, so put in dictionary
            while Token_queue.qsize() > 0:
                temp_token = Token_queue.get()
                if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                    self.code_generator.add_to_dict(temp_token)

            if self.data_decls_new():
                if DEBUG:
                    print("<program_z> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <program_z> : Error from <data_decls_new>")
                return False                 
        elif lookahead['value'] == '(':
            while Token_queue.qsize() > 0:
                temp_token = Token_queue.get()
                print("putting in: [" + temp_token['value'] + "]")
                Func_decl_queue.put(temp_token)

            if self.func_list_new():
                if DEBUG:
                    print("<program_z> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <program_z> : Error from <func_list_new>")
                return False         
        else:
            if DEBUG:
                print("Error in Parser : Non-terminal: <program_z> : Invalid token")
            return False                     

    def func_list(self):
        """ <func list> --> empty 
                          | <func> <func list> """

        if DEBUG:
            print("<func_list> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1) 
        if lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            if self.func():
                if self.func_list():
                    if DEBUG:
                        print("<func_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser : Non-terminal: <func_list> : Error from <func_list>")
                    return False                    
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <func_list> : Error from <func>")
                return False
        else:
            if DEBUG:
                print("<func_list> : return True")
            return True

    def func_list_new(self):
        """ <func list new> -->  <func decl new> <func z> <func list> """

        if DEBUG:
            print("<func_list_new> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1) 
        if lookahead['value'] == '(':
            if self.func_decl_new():
                if self.func_z():
                    if self.func_list():
                        if DEBUG:
                            print("<func_list_new> : return True")
                        return True
                    else:
                        if DEBUG:
                            print("Error in Parser : Non-terminal: <func_list_new> : Error from <func_list>")
                        return False                       
                else:
                    if DEBUG:
                        print("Error in Parser : Non-terminal: <func_list_new> : Error from <func_z>")
                    return False
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <func_list_new> : Error from <func_decl_new>")
                return False
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <func_list_new> : Invalid token")
            return False

    def func(self):
        """ <func> --> <func decl> <func z> """

        if DEBUG:
            print("<func> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1) 
        if lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            if self.func_decl():
                if self.func_z():
                    if DEBUG:
                        print("<func> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser : Non-terminal: <func> : Error from <func_z>")
                    return False                    
            else:
                if DEBUG:
                    print("Error in Parser : Non-terminal: <func> : Error from <func_decl>")
                return False               
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <func> : Invalid token")
            return False             

    def func_z(self):
        """<func z> --> semicolon
                      | left_brace <data decls> <statements> right_brace """

        if DEBUG:
            print("<func_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1) 
        if lookahead['value'] == ';':
            Token_queue.put(self.scanner.get_next_token())
            if DEBUG:
                print("<func_z> : return True")
            return True
        elif lookahead['value'] == '{':
            Func_decl_queue.put(self.scanner.get_next_token())
            self.code_generator.print_function_declaration()
            #Token_queue.put(self.scanner.get_next_token())
            if self.data_decls():
                if DEBUG:
                    print("glen 1 <func_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
                if self.statements():
                    if DEBUG:
                        print("glen 2 <func_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
                    temp_token = self.scanner.get_next_token()
                    if temp_token['value'] == '}':
                        Token_queue.put(temp_token)
                        self.code_generator.print_function()
                        self.function_count = self.function_count + 1
                        if DEBUG:
                            print("<func_z> : return True")
                        return True
                    else:
                        if DEBUG:
                            print("1 Error in Parser: Non-terminal: <func_z> : Invalid token")
                        return False                         
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <func_z> : Error from <statements>")
                    return False  
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <func_z> : Error from <data_decls>")
                return False  
        else:
            if DEBUG:
                print("2 Error in Parser: Non-terminal: <func_z> : Invalid token")
            return False   

    def func_decl(self):
        """ <func decl> --> <type name> ID left_parenthesis <parameter list> right_parenthesis """

        if DEBUG:
            print("<func_decl> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            Func_decl_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                Func_decl_queue.put(temp_token)
                temp_token = self.scanner.get_next_token()
                if temp_token['value'] == '(':
                    Func_decl_queue.put(temp_token)
                    if self.parameter_list():
                        temp_token = self.scanner.get_next_token()
                        if temp_token['value'] == ')':
                            Func_decl_queue.put(temp_token)
                            if DEBUG:
                                print("<func_decl> : return True")
                            return True
                        else:
                            if DEBUG:
                                print("Error in Parser: Non-terminal: <func_decl> : Invalid token")
                            return False 
                    else:
                        if DEBUG:
                            print("Error in Parser: Non-terminal: <func_decl> : Error from <parameter_list>")
                        return False                        
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <func_decl> : Invalid token")
                    return False   
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <func_decl> : Invalid token")
                return False 
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <func_decl> : Invalid token")
            return False                                        


    def func_decl_new(self):
        """ <func decl new> --> left_parenthesis <parameter list> right_parenthesis """

        if DEBUG:
            print("<func_decl_new> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == '(':
            Func_decl_queue.put(self.scanner.get_next_token())
            if self.parameter_list():
                temp_token = self.scanner.get_next_token()
                if temp_token['value'] == ')':
                    Func_decl_queue.put(temp_token)
                    if DEBUG:
                        print("<func_decl_new> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <func_decl_new> : Invalid token")
                    return False 
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <func_decl_new> : Error from <parameter_list>")
                return False                                    
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <func_decl_new> : Invalid token")
            return False             


    def type_name(self):
        """ <type name> --> int 
                            | void 
                            | binary 
                            | decimal """

        if DEBUG:
            print("<type_name> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            self.scanner.get_next_token()
            return True
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <type_name> : Invalid token")
            return False 
     
    def parameter_list(self):
        """ <parameter list> --> empty 
                                | void <parameter list z>
                                | int ID <non-empty list prime> 
                                | binary ID <non-empty list prime> 
                                | decimal ID <non-empty list prime> """

        if DEBUG:
            print("<parameter_list> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == 'void':
            Func_decl_queue.put(self.scanner.get_next_token())
            if self.parameter_list_z():
                if DEBUG:
                    print("<parameter_list> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                return False
        elif lookahead['value'] == 'int':
            Func_decl_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                self.code_generator.add_to_dict(temp_token)
                Func_decl_queue.put(temp_token)
                Parameter_queue.put(temp_token)
                if self.non_empty_list_prime():
                    if DEBUG:
                        print("<parameter_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                    return False
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                return False               
        elif lookahead['value'] == 'binary':
            Func_decl_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                self.code_generator.add_to_dict(temp_token)
                Func_decl_queue.put(temp_token)
                Parameter_queue.put(temp_token)
                if self.non_empty_list_prime():
                    if DEBUG:
                        print("<parameter_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                    return False
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                return False 
        elif lookahead['value'] == 'decimal':
            Func_decl_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                self.code_generator.add_to_dict(temp_token)
                Func_decl_queue.put(temp_token)
                Parameter_queue.put(temp_token)
                if self.non_empty_list_prime():
                    if DEBUG:
                        print("<parameter_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                    return False
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <parameter_list> : Error from <non_empty_list_prime>")
                return False 
        else:
            if DEBUG:
                print("<parameter_list> : return True")
            return True   



    def parameter_list_z(self):
        """ <parameter list z> --> empty
                     | ID <non-empty list prime> """
        if DEBUG:
            print("<parameter_list_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['type'] == TOKEN_TYPES.IDENTIFIER:
            temp_token = self.scanner.get_next_token()
            self.code_generator.add_to_dict(temp_token)
            Func_decl_queue.put(temp_token)
            Parameter_queue.put(temp_token)
            if self.non_empty_list_prime():
                if DEBUG:
                    print("<parameter_list_z> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <parameter_list_z> : Error from <non_empty_list_prime>")
                return False   
        else:
            if DEBUG:
                print("<parameter_list_z> : return True")
            return True  

    def non_empty_list(self):
        """ <non-empty list> --> <type name> ID <non-empty list prime> """

        if DEBUG:
            print("<non_empty_list> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['int', 'void', 'binary', 'void']:
            self.scanner.get_next_token()
            if self.scanner.get_next_token()['type'] == TOKEN_TYPES.IDENTIFIER:
                if self.non_empty_list_prime():
                    if DEBUG:
                        print("<non_empty_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <non_empty_list> : Error from <non_empty_list_prime>")
                    return False 
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <non_empty_list> : Invalid token")
                return False  
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <non_empty_list> : Invalid token")
            return False   

    def non_empty_list_prime(self):
        """ <non-empty list prime> --> empty
                         | comma <type name> ID <non-empty list prime> """

        if DEBUG:
            print("<non_empty_list_prime> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == ',':
            Func_decl_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['value'] in ['int', 'void', 'binary', 'decimal']:
                Func_decl_queue.put(temp_token)
                temp_token = self.scanner.get_next_token()
                if temp_token['type'] ==  TOKEN_TYPES.IDENTIFIER:
                    self.code_generator.add_to_dict(temp_token)
                    Func_decl_queue.put(temp_token)
                    Parameter_queue.put(temp_token)
                    if self.non_empty_list_prime():
                        if DEBUG:
                            print("<non_empty_list_prime> : return True")
                        return True
                    else:
                        if DEBUG:
                            print("Error in Parser: Non-terminal: <non_empty_list_prime> : Error from <non_empty_list_prime>")
                        return False 
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <non_empty_list_prime> : Invalid token")
                    return False  
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <non_empty_list_prime> : Invalid token")
                return True    
        else:
            if DEBUG:
                print("<non_empty_list_prime> : return True")
            return True   


    def data_decls(self):
        """ <data decls> --> empty 
               | <type name> <id list> semicolon <data decls> """
        #global DATA_DECLARATION
        if DEBUG:
            print("<data_decls> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['int', 'void', 'binary', 'decimal']:
            self.scanner.get_next_token()
            self.DATA_DECLARATION_IND  = True
            print("DATA_DECLARATION set to True "  + str(self.DATA_DECLARATION_IND))
            if self.id_list():
                if self.scanner.get_next_token()['value'] == ';':
                    self.DATA_DECLARATION_IND  = False
                    print("DATA_DECLARATION set to False "  + str(self.DATA_DECLARATION_IND ))
                    self.variable_count = self.variable_count + 1
                    #self.scanner.get_next_token()
                    if self.data_decls():
                        if DEBUG:
                            print("<data_decls> : return True")
                        return True
                    else:
                        if DEBUG:
                            print("Error in Parser: Non-terminal: <data_decls> : Error from <data_decls>")
                        return False                        
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <data_decls> : Invalid token")
                    return False 
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <data_decls> : Error from <id_list>")
                return False                                                               
        else:
            if DEBUG:
                print("<data_decls> : return True")
            return True 


    def data_decls_new(self):
        """ <data decls new> --> <id z> <id list prime> semicolon <data or func decl> """

        if DEBUG:
            print("<data_decls_new> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['[', ';', ','] :
            self.DATA_DECLARATION_IND  = True
            print("DATA_DECLARATION set to True "  + str(self.DATA_DECLARATION_IND ))
            if self.id_z():
                if self.id_list_prime():
                    if self.scanner.get_next_token()['value'] == ';':
                        self.DATA_DECLARATION_IND  = False
                        print("DATA_DECLARATION set to False "  + str(self.DATA_DECLARATION_IND ))
                        self.variable_count = self.variable_count + 1
                        if self.data_or_func_decl():
                            if DEBUG:
                                print("<data_decls_new> : return True")
                            return True
                        else:
                            if DEBUG:
                                print("Error in Parser: Non-terminal: <data_decls_new> : Error from <data_or_func_decl>")
                            return False                            
                    else: 
                        if DEBUG:
                            print("Error in Parser: Non-terminal: <data_decls_new> : Invalid token")
                        return False        
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <data_decls_new> : Error from <id_list_prime>")
                    return False                     
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <data_decls_new> : Error from <id_z>")
                return False  
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <data_decls_new> : Invalid token")
            return False           



    def data_or_func_decl(self):
        """ <data or func decl> --> <type name> ID <data or func decl z> 
                                    | empty """
        if DEBUG:
            print("<data_or_func_decl> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['int', 'void', 'binary', 'void']:
            Temp_queue.put(self.scanner.get_next_token())
            temp_token = self.scanner.get_next_token()
            if temp_token['type'] == TOKEN_TYPES.IDENTIFIER:
                Temp_queue.put(temp_token)
                if self.data_or_func_decl_z():
                    if DEBUG:
                        print("<data_or_func_decl> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <data_or_func_decl> : Error from <data_or_func_z>")
                    return False  
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <data_or_func_decl> : Invalid token")
                return False 
        else:
            if DEBUG:
                print("<data_or_func_decl> : return True")
            return True


    def data_or_func_decl_z(self):
        """  <data or func decl z> --> <data decls new>
                                     | <func list new> """

        if DEBUG:
            print("<data_or_func_decl_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] in ['[', ';', ',']:
            while Temp_queue.qsize() > 0:
                temp_token = Temp_queue.get()
                self.code_generator.add_to_dict(temp_token)
            if self.data_decls_new():
                if DEBUG:
                    print("<data_or_func_decl_z> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <data_or_func_decl_z> : Error from <data_decls_new>")
                return False                
        elif lookahead['value'] == '(':
            if FIRST_TIME_IND:
                self.code_generator.print_global()
                FIRST_TIME_IND = False
            while Temp_queue.qsize() > 0:
                temp_token = Temp_queue.get()
                Token_queue.put(temp_token)
            if self.func_list_new():
                if DEBUG:
                    print("<data_or_func_decl_z> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <data_or_func_decl_z> : Error from <func_list_new>")
                return False 
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <data_or_func_decl_z> : Invalid Token")
            return False            



    def id_list(self):
        """ <id list> --> <id> <id list prime> """

        if DEBUG:
            print("<id_list> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['type'] ==  TOKEN_TYPES.IDENTIFIER:
            if self.id():
                if self.id_list_prime():
                    if DEBUG:
                        print("<id_list> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <id_list> : Error from <id_list_prime>")
                    return False 
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <id_list> : Error from <id>")
                return False
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <id_list> : Invalid Token")
            return False                           
                                       

    def id_list_prime(self):
        """ <id list prime> --> empty
                              | comma <id> <id list prime> """

        if DEBUG:
            print("<id_list_prime> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == ',':
            self.variable_count = self.variable_count + 1
            if not self.DATA_DECLARATION_IND:
                Token_queue.put(self.scanner.get_next_token())
            else:
                self.scanner.get_next_token()
            if self.id():
                if self.id_list_prime():
                    if DEBUG:
                        print("<id_list_prime> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <id_list_prime> : Error from <id_list_prime>")
                    return False 
        else:
            if DEBUG:
                print("<id_list_prime> : return True")
            return True               

    def id(self):
        """ <id> --> ID <id z> """

        if DEBUG:
            print("<id> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['type'] == TOKEN_TYPES.IDENTIFIER:
            temp_token = self.scanner.get_next_token()
            self.code_generator.add_to_dict(temp_token)
            if not self.DATA_DECLARATION_IND:  # Fix adding to dict
                print("DATA_DECLARATION: " + str(self.DATA_DECLARATION_IND ) + " temp_token: " + temp_token['value']) 
                Token_queue.put(temp_token)
            if self.id_z():       
                if DEBUG:
                    print("<id> : return True")
                return True
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <id> : Error from <id_z>")
                return False      
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <id> : Invalid Token")
            return False                        


    def id_z(self):  #Handling not done
        """ <id z> --> empty
                    | left_bracket <expression> right_bracket """

        if DEBUG:
            print("<id_z> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == '[':
            self.scanner.get_next_token()
            if self.expression():
                if self.scanner.get_next_token()['value'] == ']': 
                    if DEBUG:
                        print("<id_z> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <id_z> : Invalid Token")
                    return False                           
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <id_z> : Error from <expression>")
                return False      
        else:
            if DEBUG:
                print("<id_z> : return True")
            return True


    def block_statements(self):
        """ <block statements> --> left_brace <statements> right_brace """

        if DEBUG:
            print("<block_statements> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)
        if lookahead['value'] == '{':
            Token_queue.put(self.scanner.get_next_token())
            if self.statements():
                if DEBUG:
                    print("matching closing brace")
                temp_token = self.scanner.get_next_token()
                if temp_token['value'] == '}':
                    Token_queue.put(temp_token)
                    if DEBUG:
                        print("<block_statements> : return True")
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <block_statements> : Invalid Token")
                    return False        
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <block_statements> : Error from <statements>")
                return False                             
        else:
            if DEBUG:
                print("Error in Parser: Non-terminal: <block_statements> : Invalid Token")
            return False    

    def statements(self):
        """ <statements> --> empty 
                            | <statement> <statements> """

        if DEBUG:
            print("<statements> called with input : <%s> " % (self.scanner.token_lookahead(1)))
        lookahead = self.scanner.token_lookahead(1)  
        if lookahead['type'] == TOKEN_TYPES.IDENTIFIER or lookahead['value'] in ['if', 'while', 'return', 'break', 'continue', 'read', 'write', 'print']:
            if self.statement():
                if self.statements():
                    if DEBUG:
                        print("<statements> : return True")     
                    return True
                else:
                    if DEBUG:
                        print("Error in Parser: Non-terminal: <statements> : Error from <statements>")
                    return False                 
            else:
                if DEBUG:
                    print("Error in Parser: Non-terminal: <statements> : Error from <statement>")
                return False  
        else:
            if DEBUG:
                print("<statements> : return True")  
            return True                

    def statement(self):
        """ <statement> --> ID <statement z>
              | <if statement> 
              | <while statement> 
              | <return statement> 
              | <break statement> 
              | <continue statement> 
              | read left_parenthesis ID right_parenthesis semicolon 
              | write left_parenthesis <expression> right_parenthesis semicolon 
              | print left_parenthesis STRING right_parenthesis semicolon """
